build-alignment fix css

--- a/style.css
+++ b/style.css
@@ -1607,8 +1607,8 @@ a {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin-left: 20%;
-  gap: 30px;
+  margin-left: 18.5%;
+  gap: 100px;
   margin-top: 2%;
   margin-bottom: 3%;
 }
@@ -1619,6 +1619,7 @@ a {
   display: flex;
   height: 7.5rem;
   border-radius: 20%;
+  margin-left: 50px;
 }
 
 .product-info {
